--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/axios": "^0.9.36",
+    "axios": "^1.8.4",
     "lucide-react": "^0.503.0",
     "next": "14.2.9",
     "react": "^18",
