--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@prisma/client": "^6.6.0",
     "@types/axios": "^0.9.36",
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
     "lucide-react": "^0.503.0",
     "next": "14.2.9",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18"
   },
