--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "@stellar/freighter-api": "^4.1.0",
     "@types/axios": "^0.9.36",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.8.4",
